--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <h2>Master of Computer Applications</h2>
                     <h3>Finolex Academy of Management and Technology, Ratnagiri</h3>
                     <h3>University of Mumbai</h3>
-                    <h3>CGPA: 7.85</h3>
+                    <h3>SGPA: 7.29</h3>
                 </div>
             </div>
             <div class="education-card">
